project(chapter_2)

message("-------------------")
message(${PROJECT_NAME})
message("-------------------")

# ----------------------------------------------------------------
# Build 
# ----------------------------------------------------------------

add_executable(${PROJECT_NAME}_1 lab_1.cpp)
add_executable(${PROJECT_NAME}_2 lab_2.cpp)
add_executable(${PROJECT_NAME}_3 lab_3.cpp)
add_executable(${PROJECT_NAME}_4 lab_4.cpp)
add_executable(${PROJECT_NAME}_5 lab_5.cpp)
add_executable(${PROJECT_NAME}_6 lab_6.cpp)
add_executable(${PROJECT_NAME}_7 lab_7.cpp)